tmp/income_research.txt
E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
tmp/check_income_cats.ts(12,45): error TS2339: Property 'code' does not exist on type '{ id: string; name: string; kind: CategoryKind; description: string | null; isActive: boolean; createdAt: Date; updatedAt: Date; }'.

    at createTSError (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2339 ]
}
